[metadata]
name = hvac_cli
author = singuliere
version = 1.0.0
release =
author-email = singuliere@autistici.org
summary = Vault CLI tool backed by the hvac Python module
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/hvac/hvac-cli
project_urls =
    Bug Tracker = https://github.com/hvac/hvac-cli/issues
    Documentation = https://hvac-cli.readthedocs.io/
    Source Code = https://github.com/hvac/hvac-cli
license = Apache License 2.0
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    hvac_cli

[entry_points]
console_scripts =
    hvac-cli = hvac_cli.cmd:main

hvac_cli =
    get = hvac_cli.get:Get

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = build
source-dir = docs
