[metadata]
name = hvac_cli
author = singuliere
version = 1.2.0
release =
author-email = singuliere@autistici.org
summary = Hashicorp Vault CLI with additional features
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/hvac/hvac-cli
project_urls =
    Bug Tracker = https://github.com/hvac/hvac-cli/issues
    Documentation = https://hvac-cli.readthedocs.io/
    Source Code = https://github.com/hvac/hvac-cli
license = Apache License 2.0
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    hvac_cli

[entry_points]
console_scripts =
    hvac-cli = hvac_cli.cmd:main

hvac_cli =
    kv delete = hvac_cli.kv:Delete
    kv destroy = hvac_cli.kv:Destroy
    kv dump = hvac_cli.kv:Dump
    kv erase = hvac_cli.kv:Erase
    kv get = hvac_cli.kv:Get
    kv list = hvac_cli.kv:List
    kv load = hvac_cli.kv:Load
    kv metadata delete = hvac_cli.kv:MetadataDelete
    kv metadata get = hvac_cli.kv:MetadataGet
    kv metadata put = hvac_cli.kv:MetadataPut
    kv patch = hvac_cli.kv:Patch
    kv put = hvac_cli.kv:Put
    kv rollback = hvac_cli.kv:Rollback
    kv undelete = hvac_cli.kv:Undelete
    status = hvac_cli.status:Status

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = build
source-dir = docs
